Added  ok label to ex 3

--- a/notebooks/Exercise 3 - OK/Exercise 3 - Analysis.ipynb
+++ b/notebooks/Exercise 3 - OK/Exercise 3 - Analysis.ipynb
@@ -214,9 +214,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c69648f",
+   "metadata": {},
+   "source": [
+    "It is possible to observe in all 4 cases that the Monte Carlo solution tends to the analytical Black-Scholes solution after an initial adjustement of around 40 blocks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82be391a",
+   "id": "5fece1f1",
    "metadata": {},
    "outputs": [],
    "source": []
