--- a/notebooks/Exercise 8/Exercise 08 - Analysis.ipynb
+++ b/notebooks/Exercise 8/Exercise 08 - Analysis.ipynb
@@ -218,6 +218,8 @@
     "plt.figure(figsize = (10,5))\n",
     "plt.plot(block, E_avg)\n",
     "plt.fill_between(block, E_avg-E_err,  E_avg+E_err, alpha=0.5, edgecolor='#CC4F1B', facecolor='#FF9848')\n",
+    "plt.xlabel(\"Block Number\")\n",
+    "\n",
     "plt.xlim((0, 99))"
    ]
   },
@@ -382,6 +384,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d8983d7-aafd-48bc-b1b4-ee3e7a66ce22",
+   "metadata": {},
+   "source": [
+    "We now produce a plot of the sampled wavefunction and compare it with the analytical solution obtained from the eigenvalue equation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 221,
    "id": "6aca4e70",
@@ -453,14 +463,6 @@
     "plt.xlim((-3,3))\n",
     "plt.legend(loc = (\"upper right\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60599653",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -479,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
